Docker is created from slim-python

--- a/TabularDataPreparationUsingPycaret.ipynb
+++ b/TabularDataPreparationUsingPycaret.ipynb
@@ -6,7 +6,7 @@
       "name": "TabularDataPreparationUsingPycaret.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNb/4VU6C65hZUYLUboIYE5",
+      "authorship_tag": "ABX9TyMmWcQ3amHy8Z8JdciRp6LE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -805,9 +805,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WU9Vh7P4P4_h",
-        "outputId": "c9939fac-bcda-476e-fcae-80676c8ef80d"
+        "outputId": "82e23b98-ebb7-4c8f-e490-edbfd7be9807"
       },
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -822,13 +822,13 @@
       "cell_type": "code",
       "source": [
         "%%writefile Dockerfile\n",
-        "FROM python:3.7\n",
+        "FROM python:3.7.13-slim\n",
         "RUN python3 -m pip install pycaret==2.3.10\n",
         "RUN python3 -m pip install Jinja2==3.1.2\n",
         "RUN apt update\n",
-        "RUN apt-get -y install ca-certificates fuse tzdata && echo \"user_allow_other\" >> /etc/fuse.conf\n",
-        "RUN curl https://rclone.org/install.sh | bash\n",
-        "\n",
+        "RUN apt-get -y install ca-certificates tzdata fuse rclone && echo \"user_allow_other\" >> /etc/fuse.conf\n",
+        "#additional installation for pycaret in python-slim\n",
+        "RUN apt-get -y install libgomp1\n",
         "COPY src/data_preparation.py /tmp\n",
         "COPY tests/test_validation.py /tmp\n",
         "COPY run_tests.sh /tmp\n",
@@ -839,15 +839,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "29dfdc92-8889-4b4a-d170-17addffbba88"
+        "outputId": "9c82c8ca-6ce5-4197-a402-3eee2e63ef21"
       },
-      "execution_count": 6,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing Dockerfile\n"
+            "Overwriting Dockerfile\n"
           ]
         }
       ]
@@ -870,6 +870,19 @@
         "    --data-preparations-options '{\"ignore_low_variance\":true, \"remove_outliers\":true, \"remove_multicollinearity\":true, \"multicollinearity_threshold\":0.7}' \\\n",
         "    --output-datasource-directory-mountable --output-datasource-containing-directory '/tmp/my_local_dir_for_test' --output-datasource-file-name 'CTG_data-prep.csv'\n",
         "\n",
+        "#https://registry.opendata.aws/humor-detection/\n",
+        "export RCLONE_CONFIG_REMOTEREAD_TYPE='s3'\n",
+        "export RCLONE_CONFIG_REMOTEREAD_PROVIDER='AWS'\n",
+        "export RCLONE_CONFIG_REMOTEREAD_ACCESS_KEY_ID=''\n",
+        "export RCLONE_CONFIG_REMOTEREAD_SECRET_ACCESS_KEY=''\n",
+        "export RCLONE_CONFIG_REMOTEREAD_REGION='us-west-2' \n",
+        "export RCLONE_CONFIG_REMOTEREAD_ENDPOINT= ''\n",
+        "\n",
+        "python /tmp/data_preparation.py --input_datasource_directory_mountable --input_datasource_directory_to_be_mounted 'humor-detection-pds/' --input-datasource-file-name 'Non-humours-biased.csv' \\\n",
+        "    --type-of-data-analysis-task 'classification' --target-variable-name 'label' \\\n",
+        "    --data-preparations-options '{\"ignore_low_variance\":true, \"remove_outliers\":true, \"remove_multicollinearity\":true, \"multicollinearity_threshold\":0.7}' \\\n",
+        "    --output-datasource-containing-directory '/tmp/my_local_dir_for_test' --output-datasource-file-name 'Non-humours-biased_data-prep.csv'\n",
+        "\n",
         "python /tmp/test_validation.py"
       ],
       "metadata": {
@@ -877,9 +890,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jzJg29vTVGcf",
-        "outputId": "2b9b8dfd-9621-4a0f-f405-b799c96911e8"
+        "outputId": "aad6c16c-37d8-49aa-ad57-efa99510466e"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -906,15 +919,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7maMc-RVqDV5",
-        "outputId": "750c80e8-2c58-4ee4-a103-9f877a259b98"
+        "outputId": "42bcb460-0c36-43bd-9a2b-ea8ad6b4a07c"
       },
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting test_validation.py\n"
+            "Writing test_validation.py\n"
           ]
         }
       ]
@@ -950,9 +963,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cVrXyQZhSIm_",
-        "outputId": "6c0c5f80-8e9a-434a-c9b5-f9fc82d360e5"
+        "outputId": "08190090-5c59-42e2-d1f7-4d004f1ea554"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1039,9 +1052,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dhXccnmvIo7u",
-        "outputId": "9cc7abee-fde5-4bf2-a362-98465186fb31"
+        "outputId": "27d4e7da-ea1c-4e0a-e112-bc2a4b4cc0fc"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -1317,9 +1330,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G12wQfVT1ann",
-        "outputId": "37dbff06-e36f-40fe-d28d-f897ac318221"
+        "outputId": "d8f9b4da-654d-4b12-ee3f-96753a3d51f3"
       },
-      "execution_count": 19,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -1338,7 +1351,7 @@
       "metadata": {
         "id": "JVc_RmC9MrgG"
       },
-      "execution_count": 20,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1351,20 +1364,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S5LCKX0SXUxs",
-        "outputId": "6480865b-c292-4e3b-891f-de7ca198f717"
+        "outputId": "88476425-356a-466e-f345-13bb21766893"
       },
-      "execution_count": 21,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'kfpcomponent'...\n",
-            "remote: Enumerating objects: 81, done.\u001b[K\n",
-            "remote: Counting objects: 100% (81/81), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (54/54), done.\u001b[K\n",
-            "remote: Total 81 (delta 34), reused 65 (delta 26), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (81/81), done.\n"
+            "remote: Enumerating objects: 102, done.\u001b[K\n",
+            "remote: Counting objects: 100% (102/102), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (70/70), done.\u001b[K\n",
+            "remote: Total 102 (delta 44), reused 78 (delta 29), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (102/102), 40.41 KiB | 713.00 KiB/s, done.\n",
+            "Resolving deltas: 100% (44/44), done.\n"
           ]
         }
       ]
@@ -1386,10 +1400,24 @@
         "!mkdir kfpcomponent/TabularDataPreparationUsingPycaret/tests"
       ],
       "metadata": {
-        "id": "PWT-29j1XYhi"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PWT-29j1XYhi",
+        "outputId": "c6249dde-ce17-4822-d1eb-f6b49a5faecf"
       },
-      "execution_count": 22,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mkdir: cannot create directory ‘kfpcomponent/TabularDataPreparationUsingPycaret’: File exists\n",
+            "mkdir: cannot create directory ‘kfpcomponent/TabularDataPreparationUsingPycaret/src’: File exists\n",
+            "mkdir: cannot create directory ‘kfpcomponent/TabularDataPreparationUsingPycaret/tests’: File exists\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1405,7 +1433,7 @@
       "metadata": {
         "id": "n3b7gcGhXde6"
       },
-      "execution_count": 23,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -1418,9 +1446,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1RUDYMnmXlIW",
-        "outputId": "2b6c5023-0f18-4416-96e5-f76bb6dc912e"
+        "outputId": "bcec3a21-34e7-4fb2-fa9a-cbe58e0c0477"
       },
-      "execution_count": 24,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -1439,7 +1467,7 @@
       "metadata": {
         "id": "iAyaTjClX9S0"
       },
-      "execution_count": 25,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -1452,9 +1480,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hW4fzKBsYCGO",
-        "outputId": "23d1b641-8b7c-4dfc-a5ac-7fe4de75d1bd"
+        "outputId": "28a55b50-d498-434c-d63d-eb223ecd5f31"
       },
-      "execution_count": 26,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -1466,12 +1494,7 @@
             "Changes to be committed:\n",
             "  (use \"git reset HEAD <file>...\" to unstage)\n",
             "\n",
-            "\t\u001b[32mnew file:   TabularDataPreparationUsingPycaret/Dockerfile\u001b[m\n",
-            "\t\u001b[32mnew file:   TabularDataPreparationUsingPycaret/component.yaml\u001b[m\n",
-            "\t\u001b[32mnew file:   TabularDataPreparationUsingPycaret/docker-compose.test.yml\u001b[m\n",
-            "\t\u001b[32mnew file:   TabularDataPreparationUsingPycaret/run_tests.sh\u001b[m\n",
-            "\t\u001b[32mnew file:   TabularDataPreparationUsingPycaret/src/data_preparation.py\u001b[m\n",
-            "\t\u001b[32mnew file:   TabularDataPreparationUsingPycaret/tests/test_validation.py\u001b[m\n",
+            "\t\u001b[32mmodified:   TabularDataPreparationUsingPycaret/Dockerfile\u001b[m\n",
             "\n"
           ]
         }
@@ -1494,35 +1517,29 @@
       "metadata": {
         "id": "FBLk0UVR04lj"
       },
-      "execution_count": 27,
+      "execution_count": 41,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!git commit -a -m \"first commit\""
+        "!git commit -a -m \"changed docker to install libgomp1\""
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VbaNqafyYHV7",
-        "outputId": "5f85af1b-6f8a-40cc-b24c-af00f9ec1ede"
+        "outputId": "c764ce92-540b-47df-8ced-cc704ae59175"
       },
-      "execution_count": 28,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[main ed99201] first commit\n",
-            " 6 files changed, 244 insertions(+)\n",
-            " create mode 100644 TabularDataPreparationUsingPycaret/Dockerfile\n",
-            " create mode 100644 TabularDataPreparationUsingPycaret/component.yaml\n",
-            " create mode 100644 TabularDataPreparationUsingPycaret/docker-compose.test.yml\n",
-            " create mode 100755 TabularDataPreparationUsingPycaret/run_tests.sh\n",
-            " create mode 100644 TabularDataPreparationUsingPycaret/src/data_preparation.py\n",
-            " create mode 100644 TabularDataPreparationUsingPycaret/tests/test_validation.py\n"
+            "[main 42a9e42] changed docker to install libgomp1\n",
+            " 1 file changed, 2 insertions(+), 1 deletion(-)\n"
           ]
         }
       ]
@@ -1537,21 +1554,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uLZfkrleaqQ3",
-        "outputId": "3900613e-2c69-4bca-8502-7ffcd4a2b2b5"
+        "outputId": "3eca20cb-c091-490b-9919-0b4c37b0cec4"
       },
-      "execution_count": 29,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Counting objects: 11, done.\n",
+            "Counting objects: 4, done.\n",
             "Delta compression using up to 2 threads.\n",
-            "Compressing objects:  11% (1/9)   \rCompressing objects:  22% (2/9)   \rCompressing objects:  33% (3/9)   \rCompressing objects:  44% (4/9)   \rCompressing objects:  55% (5/9)   \rCompressing objects:  66% (6/9)   \rCompressing objects:  77% (7/9)   \rCompressing objects:  88% (8/9)   \rCompressing objects: 100% (9/9)   \rCompressing objects: 100% (9/9), done.\n",
-            "Writing objects:   9% (1/11)   \rWriting objects:  18% (2/11)   \rWriting objects:  27% (3/11)   \rWriting objects:  36% (4/11)   \rWriting objects:  45% (5/11)   \rWriting objects:  54% (6/11)   \rWriting objects:  63% (7/11)   \rWriting objects:  72% (8/11)   \rWriting objects:  81% (9/11)   \rWriting objects:  90% (10/11)   \rWriting objects: 100% (11/11)   \rWriting objects: 100% (11/11), 5.05 KiB | 5.05 MiB/s, done.\n",
-            "Total 11 (delta 0), reused 0 (delta 0)\n",
+            "Compressing objects:  25% (1/4)   \rCompressing objects:  50% (2/4)   \rCompressing objects:  75% (3/4)   \rCompressing objects: 100% (4/4)   \rCompressing objects: 100% (4/4), done.\n",
+            "Writing objects:  25% (1/4)   \rWriting objects:  50% (2/4)   \rWriting objects:  75% (3/4)   \rWriting objects: 100% (4/4)   \rWriting objects: 100% (4/4), 465 bytes | 465.00 KiB/s, done.\n",
+            "Total 4 (delta 3), reused 0 (delta 0)\n",
+            "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
             "To https://github.com/ShaswataJash/kfpcomponent.git\n",
-            "   16d2782..ed99201  main -> main\n"
+            "   31d731c..42a9e42  main -> main\n"
           ]
         }
       ]
@@ -1566,9 +1584,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LwhyFmmz5bnu",
-        "outputId": "f92c31ab-bc9e-4366-f09a-d5ad00dacc80"
+        "outputId": "7aff8d82-16e2-46a2-d1d2-efd2402e8021"
       },
-      "execution_count": 30,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
