--- a/TabularDataPreparationUsingPycaret.ipynb
+++ b/TabularDataPreparationUsingPycaret.ipynb
@@ -6,7 +6,7 @@
       "name": "TabularDataPreparationUsingPycaret.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNdKIXtXORexZb0WoHlXrNc",
+      "authorship_tag": "ABX9TyOB4nk3z8H1aTZxIOIFjj3x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -502,7 +502,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!apt-get install ca-certificates fuse tzdata curl && \\\n",
+        "!apt-get install ca-certificates fuse tzdata curl unzip && \\\n",
         "  echo \"user_allow_other\" >> /etc/fuse.conf"
       ],
       "metadata": {
@@ -510,9 +510,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3p89zTHfYqwc",
-        "outputId": "c0351295-b6f2-4cdb-c3dd-cd6b7e044e30"
+        "outputId": "011cb27d-af00-419c-f347-281783d10701"
       },
-      "execution_count": 6,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,11 +525,11 @@
             "ca-certificates is already the newest version (20210119~18.04.2).\n",
             "curl is already the newest version (7.58.0-2ubuntu3.18).\n",
             "tzdata is already the newest version (2022a-0ubuntu0.18.04).\n",
-            "tzdata set to manually installed.\n",
+            "unzip is already the newest version (6.0-21ubuntu1.1).\n",
             "The following package was automatically installed and is no longer required:\n",
             "  libnvidia-common-460\n",
             "Use 'apt autoremove' to remove it.\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 45 not upgraded.\n"
+            "0 upgraded, 0 newly installed, 0 to remove and 70 not upgraded.\n"
           ]
         }
       ]
@@ -833,6 +833,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Docker size reduction tips:\n",
+        "\n",
+        "\n",
+        "*   https://devopscube.com/reduce-docker-image-size/\n",
+        "*   https://www.ecloudcontrol.com/best-practices-to-reduce-docker-images-size/\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "eQXf07hoPzxM"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "%%writefile Dockerfile\n",
@@ -842,13 +856,15 @@
         "#installing jinja2 additionally due to Ref: https://github.com/pycaret/pycaret/issues/2490\n",
         "RUN python3 -m pip install Jinja2==3.1.2\n",
         "\n",
-        "RUN apt update\n",
-        "RUN apt-get -y install ca-certificates tzdata fuse curl && echo \"user_allow_other\" >> /etc/fuse.conf\n",
-        "RUN curl https://rclone.org/install.sh | bash\n",
-        "RUN rclone --version\n",
-        "\n",
+        "#install fuse as dependency for rclone. Additionally, install curl, unzip for rclone installer to work\n",
         "#libgomp1 installation for pycaret in python-slim\n",
-        "RUN apt-get -y install libgomp1\n",
+        "RUN apt-get update \\\n",
+        "    && apt-get install --no-install-recommends -y curl fuse libgomp1 unzip \\\n",
+        "    && echo \"user_allow_other\" >> /etc/fuse.conf \\\n",
+        "    && curl https://rclone.org/install.sh | bash \\\n",
+        "    && apt-get -y remove --purge curl unzip \\\n",
+        "    && rm -rf /var/lib/apt/lists/* \\\n",
+        "    && rclone --version\n",
         "\n",
         "COPY src/data_preparation.py /tmp\n",
         "COPY tests/test_validation.py /tmp\n",
@@ -860,15 +876,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "79c204f4-bc3c-4dd5-b897-508f2b0b1a5e"
+        "outputId": "7a206890-1a59-434d-bfe1-dbb5cfc14eeb"
       },
-      "execution_count": 10,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing Dockerfile\n"
+            "Overwriting Dockerfile\n"
           ]
         }
       ]
@@ -1005,7 +1021,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "https://github.com/kubeflow/pipelines/blob/sdk/release-1.8/sdk/python/kfp/dsl/types.py"
+        "\n",
+        "*   https://www.kubeflow.org/docs/components/pipelines/sdk/component-development/#designing-a-pipeline-component\n",
+        "*   https://github.com/kubeflow/pipelines/blob/sdk/release-1.8/sdk/python/kfp/dsl/types.py\n",
+        "\n"
       ],
       "metadata": {
         "id": "W7uyWGT6Sccr"
@@ -1536,9 +1555,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G12wQfVT1ann",
-        "outputId": "ee5782a3-4d21-45df-fb4b-1e393a622d1e"
+        "outputId": "0850dc2e-2a0e-41b9-e387-dc8a1ef559b4"
       },
-      "execution_count": 17,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
@@ -1557,7 +1576,7 @@
       "metadata": {
         "id": "JVc_RmC9MrgG"
       },
-      "execution_count": 16,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -1570,21 +1589,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S5LCKX0SXUxs",
-        "outputId": "5ba0e246-ea97-4e01-9e41-572ae3ae8b87"
+        "outputId": "781b1c44-ddc4-471d-ec84-a3ce7edbbed4"
       },
-      "execution_count": 18,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'kfpcomponent'...\n",
-            "remote: Enumerating objects: 118, done.\u001b[K\n",
-            "remote: Counting objects: 100% (118/118), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (83/83), done.\u001b[K\n",
-            "remote: Total 118 (delta 55), reused 81 (delta 32), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (118/118), 50.40 KiB | 1.53 MiB/s, done.\n",
-            "Resolving deltas: 100% (55/55), done.\n"
+            "remote: Enumerating objects: 143, done.\u001b[K\n",
+            "remote: Counting objects: 100% (143/143), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (96/96), done.\u001b[K\n",
+            "remote: Total 143 (delta 72), reused 99 (delta 42), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (143/143), 58.02 KiB | 1.53 MiB/s, done.\n",
+            "Resolving deltas: 100% (72/72), done.\n"
           ]
         }
       ]
@@ -1610,9 +1629,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PWT-29j1XYhi",
-        "outputId": "7983b067-30f5-4acf-fabc-2ca4cfe7c41b"
+        "outputId": "53ae2895-b877-44c2-975d-77c3f7264d53"
       },
-      "execution_count": 19,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
@@ -1639,7 +1658,7 @@
       "metadata": {
         "id": "n3b7gcGhXde6"
       },
-      "execution_count": 20,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -1652,9 +1671,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1RUDYMnmXlIW",
-        "outputId": "8c9e47de-f9c5-4480-ddbe-e75ec5eca753"
+        "outputId": "7de42909-4d7e-4b37-a2db-a0c8ada36f01"
       },
-      "execution_count": 21,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
@@ -1673,7 +1692,7 @@
       "metadata": {
         "id": "iAyaTjClX9S0"
       },
-      "execution_count": 22,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -1686,9 +1705,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hW4fzKBsYCGO",
-        "outputId": "391e3fdc-8829-40d1-be77-9226e347af88"
+        "outputId": "5e71adaa-0ae1-4847-d6b4-1d28d33b0f0f"
       },
-      "execution_count": 23,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
@@ -1701,10 +1720,6 @@
             "  (use \"git reset HEAD <file>...\" to unstage)\n",
             "\n",
             "\t\u001b[32mmodified:   TabularDataPreparationUsingPycaret/Dockerfile\u001b[m\n",
-            "\t\u001b[32mmodified:   TabularDataPreparationUsingPycaret/component.yaml\u001b[m\n",
-            "\t\u001b[32mmodified:   TabularDataPreparationUsingPycaret/run_tests.sh\u001b[m\n",
-            "\t\u001b[32mmodified:   TabularDataPreparationUsingPycaret/src/data_preparation.py\u001b[m\n",
-            "\t\u001b[32mmodified:   TabularDataPreparationUsingPycaret/tests/test_validation.py\u001b[m\n",
             "\n"
           ]
         }
@@ -1727,29 +1742,29 @@
       "metadata": {
         "id": "FBLk0UVR04lj"
       },
-      "execution_count": 24,
+      "execution_count": 86,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!git commit -a -m \"enhanced the test script\""
+        "!git commit -a -m \"optimized docker file\""
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VbaNqafyYHV7",
-        "outputId": "b2c037c4-d608-46f5-c062-37bfb9a54fe6"
+        "outputId": "447674f4-f4ba-421e-8b43-b651859b9455"
       },
-      "execution_count": 25,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[main fedaf82] enhanced the test script\n",
-            " 5 files changed, 37 insertions(+), 5 deletions(-)\n"
+            "[main e52d6da] optimized docker file\n",
+            " 1 file changed, 1 insertion(+), 1 deletion(-)\n"
           ]
         }
       ]
@@ -1764,22 +1779,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uLZfkrleaqQ3",
-        "outputId": "d4edad37-74f3-4a5f-c443-9e13e8b2774a"
+        "outputId": "6832b1c7-ef6c-4bf1-e632-d3c77b63208b"
       },
-      "execution_count": 26,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Counting objects: 10, done.\n",
+            "Counting objects: 4, done.\n",
             "Delta compression using up to 2 threads.\n",
-            "Compressing objects:  12% (1/8)   \rCompressing objects:  25% (2/8)   \rCompressing objects:  37% (3/8)   \rCompressing objects:  50% (4/8)   \rCompressing objects:  62% (5/8)   \rCompressing objects:  75% (6/8)   \rCompressing objects:  87% (7/8)   \rCompressing objects: 100% (8/8)   \rCompressing objects: 100% (8/8), done.\n",
-            "Writing objects:  10% (1/10)   \rWriting objects:  20% (2/10)   \rWriting objects:  30% (3/10)   \rWriting objects:  40% (4/10)   \rWriting objects:  50% (5/10)   \rWriting objects:  60% (6/10)   \rWriting objects:  70% (7/10)   \rWriting objects:  80% (8/10)   \rWriting objects:  90% (9/10)   \rWriting objects: 100% (10/10)   \rWriting objects: 100% (10/10), 2.01 KiB | 2.01 MiB/s, done.\n",
-            "Total 10 (delta 5), reused 0 (delta 0)\n",
-            "remote: Resolving deltas: 100% (5/5), completed with 5 local objects.\u001b[K\n",
+            "Compressing objects:  25% (1/4)   \rCompressing objects:  50% (2/4)   \rCompressing objects:  75% (3/4)   \rCompressing objects: 100% (4/4)   \rCompressing objects: 100% (4/4), done.\n",
+            "Writing objects:  25% (1/4)   \rWriting objects:  50% (2/4)   \rWriting objects:  75% (3/4)   \rWriting objects: 100% (4/4)   \rWriting objects: 100% (4/4), 396 bytes | 396.00 KiB/s, done.\n",
+            "Total 4 (delta 3), reused 0 (delta 0)\n",
+            "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
             "To https://github.com/ShaswataJash/kfpcomponent.git\n",
-            "   aa3dfdd..fedaf82  main -> main\n"
+            "   6aa31de..e52d6da  main -> main\n"
           ]
         }
       ]
@@ -1794,9 +1809,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LwhyFmmz5bnu",
-        "outputId": "e55c74c0-022a-45ee-f9be-bced96c08a5b"
+        "outputId": "dd459b3b-b01f-4296-f987-c37df867b8cc"
       },
-      "execution_count": 27,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "stream",
